update to torchtext 0.9

--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -49,8 +49,7 @@
    ],
    "source": [
     "import torch\n",
-    "from torchtext import data\n",
-    "from torchtext import datasets\n",
+    "from torchtext.legacy import data\n",
     "\n",
     "SEED = 1234\n",
     "\n",
@@ -86,7 +85,7 @@
     }
    ],
    "source": [
-    "from torchtext import datasets\n",
+    "from torchtext.legacy import datasets\n",
     "\n",
     "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)"
    ]
