--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -52,8 +52,8 @@
    ],
    "source": [
     "import torch\n",
-    "from torchtext import data\n",
-    "from torchtext import datasets\n",
+    "from torchtext.legacy import data\n",
+    "from torchtext.legacy import datasets\n",
     "import random\n",
     "import numpy as np\n",
     "\n",
