--- a/6 - Transformers for Sentiment Analysis.ipynb
+++ b/6 - Transformers for Sentiment Analysis.ipynb
@@ -298,7 +298,7 @@
     }
    ],
    "source": [
-    "from torchtext import data\n",
+    "from torchtext.legacy import data\n",
     "\n",
     "TEXT = data.Field(batch_first = True,\n",
     "                  use_vocab = False,\n",
@@ -334,7 +334,7 @@
     }
    ],
    "source": [
-    "from torchtext import datasets\n",
+    "from torchtext.legacy import datasets\n",
     "\n",
     "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
     "\n",
