--- a/A - Using TorchText with Your Own Datasets.ipynb
+++ b/A - Using TorchText with Your Own Datasets.ipynb
@@ -53,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torchtext import data\n",
-    "from torchtext import datasets\n",
+    "from torchtext.legacy import data\n",
+    "from torchtext.legacy import datasets\n",
     "\n",
     "NAME = data.Field()\n",
     "SAYING = data.Field()\n",
