--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torchtext import data\n",
+    "from torchtext.legacy import data\n",
     "\n",
     "SEED = 1234\n",
     "\n",
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torchtext import datasets\n",
+    "from torchtext.legacy import datasets\n",
     "\n",
     "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)"
    ]
