--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -89,8 +89,8 @@
    ],
    "source": [
     "import torch\n",
-    "from torchtext import data\n",
-    "from torchtext import datasets\n",
+    "from torchtext.legacy import data\n",
+    "from torchtext.legacy import datasets\n",
     "\n",
     "SEED = 1234\n",
     "\n",
