--- a/5 - Multi-class Sentiment Analysis.ipynb
+++ b/5 - Multi-class Sentiment Analysis.ipynb
@@ -37,8 +37,8 @@
    ],
    "source": [
     "import torch\n",
-    "from torchtext import data\n",
-    "from torchtext import datasets\n",
+    "from torchtext.legacy import data\n",
+    "from torchtext.legacy import datasets\n",
     "import random\n",
     "\n",
     "SEED = 1234\n",
