added parameter count - added function to count parameters - small variable name change, text -> ids, and labels -> label

--- a/1_nbow.ipynb
+++ b/1_nbow.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f89ee6bcab0>"
+       "<torch._C.Generator at 0x7f8647027a10>"
       ]
      },
      "execution_count": 2,
@@ -138,32 +138,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16d3b2b972a54dd099fd309d036ceac8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/25000 [00:00<?, ?ex/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b828d34b04c640fa88a8bff71b23b2d9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/25000 [00:00<?, ?ex/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached processed dataset at /home/ben/.cache/huggingface/datasets/imdb/plain_text/1.0.0/e3c66f1788a67a89c7058d97ff62b6c30531e05b549de56d3ab91891f0561f9a/cache-4ffe512216ae4670.arrow\n",
+      "Loading cached processed dataset at /home/ben/.cache/huggingface/datasets/imdb/plain_text/1.0.0/e3c66f1788a67a89c7058d97ff62b6c30531e05b549de56d3ab91891f0561f9a/cache-d938c8176f97ece1.arrow\n"
+     ]
     }
    ],
    "source": [
@@ -402,7 +382,15 @@
    "execution_count": 11,
    "id": "15e48bfb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached split indices for dataset at /home/ben/.cache/huggingface/datasets/imdb/plain_text/1.0.0/e3c66f1788a67a89c7058d97ff62b6c30531e05b549de56d3ab91891f0561f9a/cache-38c3567794d10337.arrow and /home/ben/.cache/huggingface/datasets/imdb/plain_text/1.0.0/e3c66f1788a67a89c7058d97ff62b6c30531e05b549de56d3ab91891f0561f9a/cache-bc414d173ef4e25b.arrow\n"
+     ]
+    }
+   ],
    "source": [
     "test_size = 0.25\n",
     "\n",
@@ -884,46 +872,13 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09f7335f177c446c909fd35ea6c97a9f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/18750 [00:00<?, ?ex/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de60ccf2aafb4db1a121d4ab67c5caa4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/6250 [00:00<?, ?ex/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7ae197184a5431c92ffad58d8f793d9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/25000 [00:00<?, ?ex/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached processed dataset at /home/ben/.cache/huggingface/datasets/imdb/plain_text/1.0.0/e3c66f1788a67a89c7058d97ff62b6c30531e05b549de56d3ab91891f0561f9a/cache-fc208fde56c48e22.arrow\n",
+      "Loading cached processed dataset at /home/ben/.cache/huggingface/datasets/imdb/plain_text/1.0.0/e3c66f1788a67a89c7058d97ff62b6c30531e05b549de56d3ab91891f0561f9a/cache-6daea9d0428ed2c3.arrow\n",
+      "Loading cached processed dataset at /home/ben/.cache/huggingface/datasets/imdb/plain_text/1.0.0/e3c66f1788a67a89c7058d97ff62b6c30531e05b549de56d3ab91891f0561f9a/cache-562f3e534c444077.arrow\n"
+     ]
     }
    ],
    "source": [
@@ -1554,9 +1509,9 @@
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_index)\n",
     "        self.fc = nn.Linear(embedding_dim, output_dim)\n",
     "\n",
-    "    def forward(self, text):\n",
-    "        # text = [batch size, seq len]\n",
-    "        embedded = self.embedding(text)\n",
+    "    def forward(self, ids):\n",
+    "        # ids = [batch size, seq len]\n",
+    "        embedded = self.embedding(ids)\n",
     "        # embedded = [batch size, seq len, embedding dim]\n",
     "        pooled = embedded.mean(dim=1)\n",
     "        # pooled = [batch size, embedding dim]\n",
@@ -1582,6 +1537,27 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "4acc5118",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model has 6,463,502 trainable parameters\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "\n",
+    "print(f'The model has {count_parameters(model):,} trainable parameters')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "866e0b64",
    "metadata": {},
    "outputs": [],
@@ -1591,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "ead7be53",
    "metadata": {},
    "outputs": [],
@@ -1601,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "1a64ead7",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1587,7 @@
        "torch.Size([300])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "7ecc5d88",
    "metadata": {},
    "outputs": [
@@ -1691,7 +1667,7 @@
        "        -3.3574e-01, -3.3371e-01,  8.6787e-02,  2.4920e-01,  6.5367e-02])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "e8540b4b",
    "metadata": {},
    "outputs": [],
@@ -1712,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "9d31228e",
    "metadata": {},
    "outputs": [
@@ -1722,7 +1698,7 @@
        "torch.Size([21543, 300])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1733,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "3a6f4173",
    "metadata": {},
    "outputs": [
@@ -1751,7 +1727,7 @@
        "       requires_grad=True)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "5c1cbd5c",
    "metadata": {},
    "outputs": [
@@ -1778,7 +1754,7 @@
        "        [ 0.1161, -0.0390,  0.1120,  ...,  0.0925, -0.1058,  0.5641]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "6ea34c9b",
    "metadata": {},
    "outputs": [],
@@ -1799,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "1332d9a6",
    "metadata": {},
    "outputs": [
@@ -1817,7 +1793,7 @@
        "       requires_grad=True)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1828,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "4fcb95e0",
    "metadata": {},
    "outputs": [],
@@ -1838,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "f8829cd4",
    "metadata": {},
    "outputs": [],
@@ -1848,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "7ed273e0",
    "metadata": {},
    "outputs": [
@@ -1858,7 +1834,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "3cdaf3b3",
    "metadata": {},
    "outputs": [],
@@ -1882,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "c721ad5d",
    "metadata": {},
    "outputs": [],
@@ -1890,16 +1866,16 @@
     "def collate(batch, pad_index):\n",
     "    batch_ids = [i['ids'] for i in batch]\n",
     "    batch_ids = nn.utils.rnn.pad_sequence(batch_ids, padding_value=pad_index, batch_first=True)\n",
-    "    batch_labels = [i['label'] for i in batch]\n",
-    "    batch_labels = torch.stack(batch_labels)\n",
+    "    batch_label = [i['label'] for i in batch]\n",
+    "    batch_label = torch.stack(batch_label)\n",
     "    batch = {'ids': batch_ids,\n",
-    "             'label': batch_labels}\n",
+    "             'label': batch_label}\n",
     "    return batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "adf5afb1",
    "metadata": {},
    "outputs": [],
@@ -1919,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "729aa9c8",
    "metadata": {},
    "outputs": [],
@@ -1931,9 +1907,9 @@
     "    epoch_accuracy = 0\n",
     "\n",
     "    for batch in dataloader:\n",
-    "        tokens = batch['ids'].to(device)\n",
+    "        ids = batch['ids'].to(device)\n",
     "        label = batch['label'].to(device)\n",
-    "        prediction = model(tokens)\n",
+    "        prediction = model(ids)\n",
     "        loss = criterion(prediction, label)\n",
     "        accuracy = get_accuracy(prediction, label)\n",
     "        optimizer.zero_grad()\n",
@@ -1947,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "e0a80c30",
    "metadata": {},
    "outputs": [],
@@ -1960,9 +1936,9 @@
     "\n",
     "    with torch.no_grad():\n",
     "        for batch in dataloader:\n",
-    "            tokens = batch['ids'].to(device)\n",
+    "            ids = batch['ids'].to(device)\n",
     "            label = batch['label'].to(device)\n",
-    "            prediction = model(tokens)\n",
+    "            prediction = model(ids)\n",
     "            loss = criterion(prediction, label)\n",
     "            accuracy = get_accuracy(prediction, label)\n",
     "            epoch_loss += loss.item()\n",
@@ -1973,13 +1949,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "703aa1e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_accuracy(prediction, label):\n",
-    "    batch_size = prediction.shape[0]\n",
+    "    batch_size, _ = prediction.shape\n",
     "    predicted_classes = prediction.argmax(dim=-1)\n",
     "    correct_predictions = predicted_classes.eq(label).sum()\n",
     "    accuracy = correct_predictions / batch_size\n",
@@ -1988,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "31343f1b",
    "metadata": {},
    "outputs": [
@@ -2049,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "cac26e8e",
    "metadata": {},
    "outputs": [
@@ -2071,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "b22e040a",
    "metadata": {},
    "outputs": [],
@@ -2089,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "9cfa14eb",
    "metadata": {},
    "outputs": [
@@ -2099,7 +2075,7 @@
        "(0, 0.9999740123748779)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2112,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "1da60d90",
    "metadata": {},
    "outputs": [
@@ -2122,7 +2098,7 @@
        "(1, 0.9999997615814209)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2135,7 +2111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "4bee6190",
    "metadata": {},
    "outputs": [
@@ -2145,7 +2121,7 @@
        "(1, 0.765370786190033)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2158,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "e3d55c92",
    "metadata": {},
    "outputs": [
@@ -2168,7 +2144,7 @@
        "(1, 0.765370786190033)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
