--- a/2_lstm.ipynb
+++ b/2_lstm.ipynb
@@ -170,8 +170,8 @@
    "outputs": [],
    "source": [
     "def numericalize_data(example, vocab):\n",
-    "    ids = {'ids': [vocab[token] for token in example['tokens']]}\n",
-    "    return ids"
+    "    ids = [vocab[token] for token in example['tokens']]\n",
+    "    return {'ids': ids}"
    ]
   },
   {
