remove unnecessary semicolons

--- a/1_nbow.ipynb
+++ b/1_nbow.ipynb
@@ -2062,7 +2062,7 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(10,6));\n",
+    "fig = plt.figure(figsize=(10,6))\n",
     "ax = fig.add_subplot(1,1,1)\n",
     "ax.plot(train_losses, label='train loss')\n",
     "ax.plot(valid_losses, label='valid loss')\n",
@@ -2091,7 +2091,7 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(10,6));\n",
+    "fig = plt.figure(figsize=(10,6))\n",
     "ax = fig.add_subplot(1,1,1)\n",
     "ax.plot(train_accs, label='train accuracy')\n",
     "ax.plot(valid_accs, label='valid accuracy')\n",
